$Id$

1.9   --/--/----

Tested against ant 1.6
call subtarget implemented

1.8.2 14/12/2003

Now handles multiple inputs with no output file/dir
Warns when copying non-text nodes to properties
clearBuffers direective

1.8.1 26/11/2003

Doc upgrade
Private external DTD outputter fix - both standard and simple outputter
Fix for node selections with results other than node iterators

1.8 09/11/2003

Modified/simplified boolean setters on XmlTask
Tested against Ant 1.6b
Logging levels now VERBOSE rather than INFO

1.8a 22/09/2003

Added copying/cutting to properties

1.7 06/09/2003
properties file included in source distribution
build.xml fixes for source distribution

1.7b 17/08/2003
setSource() fix for use with <script> tasks
Source/absolute path fix
preserveType fix and blank DOCTYPE fixes. 
Logging now performed via the Ant logging framework
1.7 release due to large changes internally and transfer to Sourceforge.net CVS

1.6.5 20/07/2003

Added the 'failWithoutMatch' attribute

1.6.4 25/06/2003

Bug fix related to blank PUBLIC/SYSTEM ids and 'preserveType'

1.6.3 24/06/2003

Now reports version number whilst running

1.6.2 17/06/2003

<copy> and <cut> operations can now store multiple nodesets
<copy> and <cut> operations can now record attribute values

1.6.1 01/06/2003

Insertion of attribute nodes from a buffer enabled

1.6  07/05/2003

Added <rename> instruction to rename elements and attributes
Added 'preserveType' attribute to allow transformed documented to preserve their original DTD ids
Added new formatting options
Creation of new documents allowed - no requirement for a source file
Compatibility issues with Ant 1.4 resolved

1.5  18/02/2003

Added 'remove' attribute to the <attr> instruction
<insert> and <replace> can now specify XML within their bodies
<replace> can handle document fragments (well-formed but rootless documents)

1.4   25/01/2003

Added the cut/copy/paste and buffer mechanisms
Added the insert directive